added author to the pkg.json

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/MikeGordillo/Notes_Taker.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Mike Gordillo",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/MikeGordillo/Notes_Taker/issues"
